Fixed table overflow

--- a/src/components/styles/button.css
+++ b/src/components/styles/button.css
@@ -1,8 +1,8 @@
 .button{
     background-color: #2026d2;
     color: white;
-    padding: 14px;
-    margin: 10px;
+    height: 100%;
+    /* margin: 10px; */
     border-radius: 5px;
     border: none;
     box-shadow: none;
@@ -10,6 +10,9 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    justify-content: center;
+    vertical-align: center;
+    padding: 0.9em;
 }
 
 .button:hover{
