--- a/src/components/styles/query_heading.css
+++ b/src/components/styles/query_heading.css
@@ -3,6 +3,8 @@
     margin: 0.7em;
     padding-top: 0.1em;
     font-size: 1.3rem;
+    padding-left: 0px!important;
+    margin-left: 0px!important;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
