--- a/src/components/styles/table_view.css
+++ b/src/components/styles/table_view.css
@@ -1,4 +1,11 @@
 .table_view{
     display: inline-block;
-    margin: 10px;
+    /* margin: 10px; */
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    
+}
+
+#table_container{
+    overflow: auto;
 }
