--- a/src/screens/styles/query_home.css
+++ b/src/screens/styles/query_home.css
@@ -1,15 +1,15 @@
 #main{
-width:75%;
+width:78%;
 display: inline-block;
 float: left;
 }
 
 #side{
-width:25%;
+width:22%;
 display: inline-block;
 float: right;
 }
 
 #query_home{
-    padding: 0.5em;
+    padding: 1.5em;
 }
